--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.66.3",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@vercel/postgres": "^0.10.0",
     "add": "^2.0.6",
     "ai": "^4.1.41",
     "autoprefixer": "^10.4.20",
